--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "index.md", title: "About"}
+  - {file: "about.md", title: "About"}
   - {file: "README.md", title: "CV"}
   - {file: "README.md", title: "Teaching"}
 
