--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ minimal: false             # use a dark header
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "about.md", title: "About"}
-  - {file: "README.md", title: "CV"}
-  - {file: "README.md", title: "Teaching"}
+  - {file: "cv.md", title: "CV"}
+  - {file: "teaching.md", title: "Teaching"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:y.portele@gmail.com"}
